--- a/predbat/Dockerfile
+++ b/predbat/Dockerfile
@@ -1,27 +1,40 @@
-#install python en pip
-ARG BUILD_FROM
-ARG BUILD_VERSION
+# Use a recent HA add-on base (Supervisor will substitute {arch})
+ARG BUILD_FROM=ghcr.io/home-assistant/{arch}-addon-base:latest
 FROM $BUILD_FROM
 
-# Set shell
+# Use bash for consistency with your scripts
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-RUN apt-get update && apt-get upgrade -y
-RUN apt-get dist-upgrade -y
-#RUN apt-get install -y python3
-RUN apt-get update && apt-get install -y --no-install-recommends python3-minimal
-RUN apt-get install -y python3-pip
+# Install Python + venv + pip (Debian base)
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends \
+      python3 \
+      python3-venv \
+      python3-pip \
+      ca-certificates \
+ && rm -rf /var/lib/apt/lists/*
 
+# Create isolated environment and make it default for the image
+RUN python3 -V && python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:${PATH}"
+
+# Workdir for any runtime data
 WORKDIR /app_data
+
+# Copy files that rarely change first (better layer cache)
+COPY requirements.txt /tmp/requirements.txt
+
+# Install Python deps into the venv
+RUN pip install --no-cache-dir --upgrade pip \
+ && pip install --no-cache-dir -r /tmp/requirements.txt
+
+# Now copy the rest of the rootfs (scripts, svc, app files, etc.)
 COPY rootfs /
-# COPY ingress.conf /etc/nginx/http.d/
 
-COPY requirements.txt /tmp/
-RUN pip install --break-system-packages -r /tmp/requirements.txt
-
-# Start app
+# Ensure run script is executable
 RUN chmod a+x /run.sh
 
+# Labels (unchanged except they’ll now reflect your build)
 ARG BUILD_ARCH
 ARG BUILD_DATE
 ARG BUILD_DESCRIPTION
@@ -47,5 +60,3 @@ LABEL \
     org.opencontainers.image.created=${BUILD_DATE} \
     org.opencontainers.image.revision=${BUILD_REF} \
     org.opencontainers.image.version=${BUILD_VERSION}
-
-#CMD [ "/run.sh" ]
