--- a/predbat/config.yaml
+++ b/predbat/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: Predbat
-version: 1.2.9
+version: 0.0.0-astp-1
 slug: predbat
 description: Home Battery Prediction and Control
 url: https://github.com/springfall2008/predbat_addon
